Updating style, switching to marker instead of layer to allow for opening popup on load

--- a/Source/Zybach.Web/src/styles.scss
+++ b/Source/Zybach.Web/src/styles.scss
@@ -180,6 +180,10 @@ figure.media {
     display:none;
   }
 
+  .leaflet-popup-content-wrapper {
+    background-color:#E6FFE5
+  }
+
   //End of added leaflet css
 
   //NGB Popover
