--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.scss
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.scss
@@ -1,22 +1,11 @@
-
-
-dl.inline dt, dl.inline dd {
-    float: left;
-    margin: 0 0.5em 0 0;
+th {
+    width: 25%;
+    text-align: right;
 }
 
-dl.inline dd + dt, dl.inline dd + dd {
-    clear: left
+td {
+    text-align:right;
 }
-
-dl.inline dd + dd {
-    float: none
-}
-
-dl.inline dt {
-    font-weight: bold
-}
-
 
 @media screen and (min-width: 576px){
     .label{
