[ZYB-19] Allow downloading time series data from chart to CSV

--- a/Source/Zybach.Web/src/scss/_custom-bootstrap.scss
+++ b/Source/Zybach.Web/src/scss/_custom-bootstrap.scss
@@ -103,7 +103,7 @@ a:hover {
 {
   background-color: $button-border-and-background;
   border-color: $button-border-and-background;
-  color: $button-text-color;
+  color: $button-text-color !important;
 }
 
 .btn-zybach:hover {
