--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -88,6 +88,7 @@
             <div class="card">
                 <div class="card-header">
                     Flow Measurements
+                    <a class="btn btn-sm btn-zybach float-right" (click)="exportChartData()"><span class="fas fa-download"></span> Download CSV</a>
                 </div>
                 <div class="card-body">
                     <div class="row" *ngIf="!timeSeries">
