Beginning commit to get a base setup and see how search reults are returned

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -97,7 +97,7 @@
             <li class="nav-item searchItem">
                 <img src="/assets/main/nav/search.png">
                 <input type="text" class="form-control" style="display: inline; width:auto;"
-                    placeholder="Registration #" disabled>
+                    placeholder="Registration #" (click)="getSearchSuggestions()">
             </li>
         </ul>
     </div>
