Allow filtering the chart with a date range UI element Provide a button to use the full date range

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.scss
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.scss
@@ -7,6 +7,11 @@ td {
     text-align:right;
 }
 
+#dateRangeInput{
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
 @media screen and (min-width: 576px){
     .label{
         text-align: right;
