--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -97,6 +97,28 @@
                             <p>Loading...</p>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="input-group col-4">
+                            <span class="font-weight-bold mt-1 mx-3">Date Range:</span>
+                            <!-- input box -->
+                            <input id="dateRangeInput" class="form-control" name="mydate" placeholder="Select a date" 
+                                   angular-mydatepicker #dp="angular-mydatepicker" 
+                                   [(ngModel)]="dateRange" [options]="myDpOptions"
+                                   (dateChanged)="onDateChanged($event)"/>
+                          
+                            <!-- toggle calendar button -->
+                            <div class="input-group-append">
+                              <button type="button" class="btn btn-secondary" (click)="dp.toggleCalendar()">
+                                <i class="fa fa-calendar-o"></i>
+                              </button>
+                            </div>
+                          
+                          </div>
+                          <div class="col-2">
+                              <button type="button" class="btn btn-zybach" (click)="useFullDateRange()">Use Full Date Range</button>
+                          </div>
+
+                    </div>
                     <div *ngIf="!noTimeSeriesData" id="{{chartID}}" style="width:100%; min-height: 340px;"></div>
                     <em *ngIf="noTimeSeriesData">No time series data available for this well.</em>
                 </div>
