Minor updates to ensure that values reappear if there is still a search string in the query box, minor styling updates

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -101,7 +101,7 @@
                     placeholder="Registration #" (click)="getSearchSuggestions()"> -->
                 <p-autoComplete #geoOptixSearch field="Name" placeholder="Search..." emptyMessage="No Results"
                     [(ngModel)]="text" [suggestions]="searchSuggestions" (completeMethod)="search($event)"
-                    (onKeyUp)="keyUp($event)" (onSelect)="select($event)" type="search">
+                    (onFocus)="reFocus(geoOptixSearch)" (onSelect)="select($event)" type="search">
                     <ng-template let-result pTemplate="item">
                         <div style="border-bottom:1px solid #D5D5D5">
                             <div class="objectType">
