--- a/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,41 @@
 <div class="container navCaretMargin">
-    <p>Under construction</p>
+    <div class="row">
+        <div class="col">
+            <h2>Manager Dashboard</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    District-Wide Statistics
+                </div>
+                <div class="card-body">
+                    Coming soon!
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    Usage Charts
+                </div>
+                <div class="card-body">
+                    Coming soon!
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    Water Usage Maps
+                </div>
+                <div class="card-body">
+                    Coming soon!
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
