Change Electrical Data to Electrical Usage

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -85,7 +85,7 @@
                                         <td style="text-align: center;">{{year}}</td>
                                         <td>{{getAnnualPumpedVolume(year, "Flow Meter")}}</td>
                                         <td>{{getAnnualPumpedVolume(year, "Continuity Meter")}}</td>
-                                        <td>{{getAnnualPumpedVolume(year, "Electrical Data")}}</td>
+                                        <td>{{getAnnualPumpedVolume(year, "Electrical Usage")}}</td>
                                     </tr>
                                 </tbody>
                             </table>
