* Fix "Oops" when there is no time series to speak of for a well * In the same situation, don't display the date range selector or chart downloader * Allow exporting the all-wells grid to a CSV * Remove the "Number of Wells Tracked" from manager dashboard and improve labels of other numbers

--- a/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -25,13 +25,11 @@
                         </div>
                     </div>
                     <div class="row" *ngIf="!loadingDistrictStatistics">
-                        <div class="col-12  col-sm-6 label"><strong>Number of Wells Tracked: </strong> </div>
-                        <div class="col-12  col-sm-6">{{districtStatistics.NumberOfWellsTracked}}</div>
-                        <div class="col-12  col-sm-6 label"><strong>Flow Meters: </strong> </div>
+                        <div class="col-12  col-sm-6 label"><strong>Wells with Flow Meters: </strong> </div>
                         <div class="col-12  col-sm-6">{{districtStatistics.NumberOfFlowMeters}}</div>
-                        <div class="col-12  col-sm-6 label"><strong>Continuity Meters: </strong> </div>
+                        <div class="col-12  col-sm-6 label"><strong>Wells with Continuity Meters: </strong> </div>
                         <div class="col-12  col-sm-6">{{districtStatistics.NumberOfContinuityMeters}}</div>
-                        <div class="col-12  col-sm-6 label"><strong>Electrical Usage Estimates: </strong> </div>
+                        <div class="col-12  col-sm-6 label"><strong>Wells with Electrical Usage Estimates: </strong> </div>
                         <div class="col-12  col-sm-6">{{districtStatistics.NumberOfElectricalUsageEstimates}}</div>
                     </div>
                 </div>
