--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -114,7 +114,7 @@
             <div class="card">
                 <div class="card-header">
                     Flow Measurements
-                    <a class="btn btn-sm btn-zybach float-right" (click)="exportChartData()"><span class="fas fa-download"></span> Download CSV</a>
+                    <a *ngIf="!noTimeSeriesData" class="btn btn-sm btn-zybach float-right" (click)="exportChartData()"><span class="fas fa-download"></span> Download CSV</a>
                 </div>
                 <div class="card-body">
                     <div class="row" *ngIf="!timeSeries">
@@ -123,7 +123,7 @@
                             <p>Loading...</p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" *ngIf="!noTimeSeriesData">
                         <div class="input-group col-4">
                             <span class="font-weight-bold mt-1 mx-3">Date Range:</span>
                             <!-- input box -->
