--- a/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-explorer/well-explorer.component.html
@@ -18,4 +18,9 @@
         [columnDefs]="columnDefs" [pagination]="false" [rowSelection]="'single'" [paginationPageSize]="100"
         (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged($event)">
     </ag-grid-angular>
+    <div class="row mt-2">
+        <div class="col">
+            <button type="button" class="btn btn-zybach float-right" (click)="downloadCsv()"><span class="fas fa-download"></span> Download CSV</button>
+        </div>
+    </div>
 </div>
