--- a/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -5,7 +5,8 @@
         </div>
         <div class="col-12 col-md-6 text-right">
             <div class="float-right pl-2">
-                <zybach-water-year-select [(selectedYear)]="yearToDisplay" (selectedYearChange)="updateAnnualData()">
+                <zybach-water-year-select [(selectedYear)]="yearToDisplay" (selectedYearChange)="updateAnnualData()"
+                    [(allYearsSelected)]="allYearsSelected" (allYearsSelectedChange)="updateAnnualData()">
                 </zybach-water-year-select>
             </div>
         </div>
