ZYB-62 color-code stream flow zone map by average pumping depth * On Manager Dashboard, retrieve pumping depth information then use it to set the fill opacity proportionately on the stream flow zone map for a sort of color ramp * Display average pumping depth in the selected year alongside other stream flow zone metadata

--- a/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
+++ b/Source/Zybach.Web/src/app/pages/dashboard/dashboard.component.html
@@ -62,6 +62,8 @@
                                 <dd>{{selectedStreamflowZone.properties.ZoneName}}</dd>
                                 <dt>Acres:</dt>
                                 <dd>{{getAcreage(selectedStreamflowZone) | number: '1.0-2'}}</dd>
+                                <dt>Average Pumping Depth:</dt>
+                                <dd>{{getPumpingDepth(selectedStreamflowZone) | number: '1.0-2'}} ac-in/ac</dd>
                             </dl>
                         </div>
                     </div>
