Add page for downloading the .json file, remove reference to rio in code

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -50,8 +50,12 @@
                     <a routerLink="/labels-and-definitions" class="dropdown-item">
                         Labels and Definitions
                     </a>
+                    <div class="dropdown-divider"></div>
                     <a routerLink="/test-api" class="dropdown-item">
                         Test API
+                    </a>
+                    <a routerLink="/robust-review-scenario" class="dropdown-item">
+                        Robust Review Scenario
                     </a>
                 </div>
             </li>
